# poetry-docker

./: README.md  docker-compose.yaml
Dockerfiles/: local.Dockerfile
service/shapes-service/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
service/shapes-service/shapes_service/: __main__.py  app.py  router.py
shapes/: Dockerfile  pyproject.toml
shapes/shapes/: main.py
